[metadata]
name = capif_routing_info
version = 1.1.0-alpha.1
description = API for Routing information. © 2021, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC). All rights reserved. 
long_description = file: README.md
keywords = OpenAPI CAPIF_Routing_Info_API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    fastapi[all]
setup_requires =
    setuptools
package_dir=
    =src
packages=find_namespace:

[options.packages.find]
where=src
